hsmc-macros/tests/ui/t9_1_duplicate_transition.stderr
error: duplicate transition on trigger `Go` in state `Red`
  --> tests/ui/t9_1_duplicate_transition.rs:15:12
   |
15 |         on(Go) => Yellow;
   |            ^^

warning: unused import: `Duration`
 --> tests/ui/t9_1_duplicate_transition.rs:1:24
  |
1 | use hsmc::{statechart, Duration};
  |                        ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
